Fix post title text formatting
- problem: the descender part (under the baseline) of characters were
  clipped unexectedly.

--- a/docs/_sass/custom-phone.scss
+++ b/docs/_sass/custom-phone.scss
@@ -107,7 +107,8 @@
 
           .post-link {
             font-size: 18px;
-            height: 18px;
+            height: 20px;
+            line-height: 1.1em;   // needed to remove clutters of next line in zoom-in
           }
 
           .post-excerpt {
