--- a/docs/_sass/custom.scss
+++ b/docs/_sass/custom.scss
@@ -338,6 +338,7 @@ $bg4-y: calc(100% - 224px);
           font-family: NotoSansCJKkr, sans-serif;
           font-weight: 500;
           font-size: 24px;
+          height: 26px;
           letter-spacing: -0.4px;
           color: #111111;
         }
